added action icons

--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -4,8 +4,9 @@
   align-items: center;
   justify-content: space-between;
   padding-top: 25px;
+  padding-bottom: 25px;
   background-color: green;
-  height: calc(100vh - 154px);
+  height: calc(100vh - 204px);
 
   .dealer-cards {
     display: flex;
@@ -19,17 +20,34 @@
     height: 86px;
     width: 60px;
     margin: 5px;
-    background-color: red;
+    background-color: black;
+    background-image: url('../assets/images/home/card-design.png');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
   }
 
   .action-wrapper {
     display: flex;
     width: 30%;
     justify-content: space-around;
+    font-weight: bold;
+
+    .action {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      img {
+        height: 50px;
+        width: 50px;
+        padding-bottom: 15px;
+      }
+    }
   }
 
   .odds-wrapper {
     position: absolute;
-    left: 10px;
+    left: 250px;
+    bottom: 250px;
   }
 }
