--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   padding-top: 25px;
   padding-bottom: 25px;
-  background-color: green;
+  background-color: #427e60;
   height: calc(100vh - 204px);
 
   .dealer-cards {
@@ -20,6 +20,8 @@
     height: 86px;
     width: 60px;
     margin: 5px;
+    font-size: 2rem;
+    cursor: pointer;
     background-color: black;
     background-image: url('../assets/images/home/card-design.png');
     background-size: contain;
@@ -37,6 +39,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      cursor: pointer;
       img {
         height: 50px;
         width: 50px;
