--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -50,7 +50,22 @@
 
   .odds-wrapper {
     position: absolute;
-    left: 250px;
-    bottom: 250px;
+    left: 125px;
+    bottom: 350px;
+    font-size: 1.1rem;
+
+    p {
+      text-decoration: underline;
+      text-transform: uppercase;
+      font-size: 1.5rem;
+      margin: 0;
+    }
+
+    ul {
+      list-style: none;
+      font-weight: bold;
+      margin-left: -40px;
+      margin-top: 10px;
+    }
   }
 }
